aws/.history/ingress_20251012034545.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aws-ingress
spec:
  controller: ingress.k8s.aws/alb
  #namespace: argocd
  annotations:
 
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-service
                port:
                  number: 80

          - path: /restaurant
            pathType: Prefix
            backend:
              service:
                name: restaurant-service
                port:
                  number: 9091

          - path: /foodcatolog
            pathType: Prefix
            backend:
              service:
                name: foodcatalogue-service
                port:
                  number: 9092

          - path: /order
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 9094


          - path: /user
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 9093
